--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextEmaill"
             android:hint="@string/email"
             android:textColor="@color/colorPrimary"
             />
@@ -52,7 +52,7 @@
             />
 
         <EditText
-            android:id="@+id/etPass"
+            android:id="@+id/etPasss"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -61,7 +61,7 @@
             android:textColor="@color/colorPrimary"
             />
         <ImageView
-            android:id="@+id/ivShowHidePass"
+            android:id="@+id/ivShowHidePasss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="-30dp"
@@ -85,7 +85,7 @@
         android:layout_marginTop="30dp">
 
         <Button
-            android:id="@+id/buttonLogin"
+            android:id="@+id/buttonLoginn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/login_button"
@@ -136,7 +136,7 @@
             />
 
         <TextView
-            android:id="@+id/signup"
+            android:id="@+id/signupp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
